--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,6 +7,8 @@
     "com.unity.purchasing": "2.0.1",
     "com.unity.textmeshpro": "2.0.0",
     "com.unity.timeline": "1.0.0",
+    "com.unity.xr.legacyinputhelpers": "2.0.2",
+    "com.unity.xr.magicleap": "2.0.0-preview.16",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.assetbundle": "1.0.0",
